--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,22 +7,14 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  configurator:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: configure Helm 3
+      run: |
+        export HELM_PLATFORM=linux-amd64 && export HELM_VERSION=helm-v3.0.0-alpha.2
+        wget https://get.helm.sh/$HELM_VERSION-$HELM_PLATFORM.tar.gz
+        tar -xvzf $HELM_VERSION-$HELM_PLATFORM.tar.gz
+        rm -rf $HELM_VERSION-$HELM_PLATFORM.tar.gz
+        mv $HELM_PLATFORM/helm <some-directory-in-path>/helm3
+        chmod +x $GOBIN/helm3
