--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build:
- 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,7 +20,16 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-      - name: Run a multi-line script
+  configure_helm:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: engineerd/configurator@v0.0.1
+        with:
+          name: "hb3"
+          url: "https://get.helm.sh/helm-v3.0.0-beta.3-linux-amd64.tar.gz"
+          pathInArchive: "linux-amd64/helm"
+      - name: Testing
         run: |
-          export HELM_PLATFORM=linux-amd64 && export HELM_VERSION=helm-v3.0.0-alpha.2
-          wget https://get.helm.sh/$HELM_VERSION-$HELM_PLATFORM.tar.gz
+          hb3 --help
+          
