--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,15 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-  configure_helm:
+  kind:
     needs: [build]
     runs-on: ubuntu-latest
     steps:
-      - uses: engineerd/configurator@v0.0.1
+      - uses: engineerd/configurator@v0.0.8
         with:
-          name: "hb3"
-          url: "https://get.helm.sh/helm-v3.0.0-beta.3-linux-amd64.tar.gz"
+          name: "h3"
+          url: "https://get.helm.sh/helm-v3.3.0-linux-amd64.tar.gz"
           pathInArchive: "linux-amd64/helm"
+      - name: Testing
+        run: |
+          h3 --help
