--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,10 @@ jobs:
     needs: [build]
     runs-on: ubuntu-latest
     steps:
-      - uses: engineerd/configurator@v0.0.8
-        with:
-          name: "h3"
-          url: "https://get.helm.sh/helm-v3.3.0-linux-amd64.tar.gz"
-          pathInArchive: "linux-amd64/helm"
+      - name: downloading micro gateway
+        run: |
+          wget https://bintray.com/wso2/rpm/rpm -O bintray-wso2-rpm.repo
+          ls
       - name: Testing
         run: |
           h3 --help
