--- a/api_definitions/apidefinition.yaml
+++ b/api_definitions/apidefinition.yaml
@@ -1,10 +1,10 @@
 openapi: 3.0.1
 info:
-  title: Mock KCB Balance inquiry
+  title: Mock Balance inquiry
   version: 1.0.0
 servers:
   - url: >-
-      http://mock-kcb-mg-balance-inquiry-remitance.apps.dev.aro.kcbgroup.com
+      http://mock-mg-balance-inquiry-remitance.apps.dev.aro.com
 security:
   - default: []
 tags:
@@ -18,7 +18,7 @@ paths:
       tags:
         - BalanceInquiry
       description: Mock Balance Inquiry
-      operationId: KCB Mock Balance Inquiry
+      operationId:  Mock Balance Inquiry
       parameters:
       - name: channelCode
         in: header
